GL/src/test/deca/syntax/valid/deca_complet/include_ok.deca
// Description :
// test include valide
//
// Resultat :
// ok

#include "Math.decah"
{
int x = 2;
println("test include valide");

}

