GL/src/test/deca/syntax/invalid/deca_complet/include_file_not_found.deca

// Description :
// test include fichier inexistant
//
// Resultat :
// Erreur lexicale
// Ligne 9 : Include file not found: missing.deca

#include "missing.deca"
{
int x = 1;
}